updates to server gateway for new mem3dg endpoint
